# open-tutor

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  deploy.sh  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  manage.py  nginx.conf.template  pyproject.toml  setup-mounted-volumes.sh  setup.sh
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py  wsgi.py
backend/documents/: models.py  serializers.py  urls.py  views.py
backend/documents/utilities/: feedback.py  flashcards.py  messages.py  overview.py  preprocessing.py  templates.py  vectorstore.py
backend/opentutor/: asgi.py  settings.py  urls.py  wsgi.py
