[project]
name = "backend"
version = "0.1.0"
description = "Django application for Open Tutor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
