[project]
name = "backend"
version = "0.1.0"
description = "Django application for Open Tutor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "jinja2==3.1.4",
    "langchain==0.1.17",
    "langchain-community==0.0.37",
    "langchain-core==0.1.52",
    "langchain-openai==0.1.6",
    "langchain-pinecone==0.1.0",
    "langchain-text-splitters==0.0.1",
    "openai>=1.27.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.4",
    "tiktoken>=0.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
